--- a/curriculum.html
+++ b/curriculum.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <h1>Currículo</h1>
+            <!-- <h1>Currículo</h1>
             <p></p>
 
             <h1>Estudos</h1>
@@ -27,7 +27,7 @@
                     <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
-            <h1></h1>
+            <h1></h1> -->
 
         </section>
             
